@@ -54,6 +54,7 @@ version <next>
 - MXF demuxer
 - VC-1/WMV3/WMV9 video decoder
 - MacIntel support
+- AVISynth support
 
 version 0.4.9-pre1:
 
